--- a/res/rapport.ltx
+++ b/res/rapport.ltx
@@ -138,9 +138,9 @@ ceux-ci au sens pareto.
 
 	\item \textbf{Movement}~: représente un mouvement, une interface pour \texttt{Footpath} et \texttt{Connection}.
 
-	\item \textbf{BallTree}~: % TODO
+    \item \textbf{BallTree}~: notre implémentation de \texttt{BallTree}
+        modifié. (Celui-ci n'est pas aussi efficace qu'un vrai \textit{balltree}).
 
-	      % TODO: is this one really necessary ?
 	\item \textbf{TransportType}~: enumérée contenant les différents moyens de déplacement.
 
 	\item \textbf{Solver}~: classe regroupant la logique nécessaire pour le CSA de base. Les méthodes essentielles :
